Minor Visual Fixes - Fixes product name not showing correctly on the About menu item. - Makes resizing look nicer by setting a background color on the app. - Sets a minimum window size.

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -5,7 +5,6 @@ html {
 }
 
 body {
-    background-color: #141414;
     overflow: hidden;
     margin: 0;
     padding: 0;
